# board-games

./: .hgignore  .pylintrc  LICENSE  __builtins__.pyi  games.xlsx  pyproject.toml  readme.md  update_readme.py
black-box/: cli_blackbox.py  game_blackbox.py  gui_blackbox.py  readme.md  test_blackbox.py
blokus-duo/: cli_blokusduo.py  game_blokusduo.py  gui_blokusduo.py  readme.md  test_blokusduo.py
criss-cross/: game_crisscross.py  gui_crisscross.py  readme.md
farmers/: cli_farmers.py  game_farmers.py  gui_farmers.py  readme.md  test_farmers.py
gold-fever/: cli_gfever.py  game_gfever.py  gui_gfever.py  readme.md  test_gfever.py
golo/: cli_golo.py  game_golo.py  gui_golo.py  readme.md
golo-basic/: readme.md  test_golo.py
golo-scard/: cli_goloscard.py  game_goloscard.py  gui_goloscard.py  readme.md  test_goloscard.py
impact/: cli_impact.py  game_impact.py  gui_impact.py  readme.md  test_impact.py
kalah/: cli_kalah.py  game_kalah.py  gui_kalah.py  readme.md  test_kalah.py
kings-valley/: cli_kvalley.py  game_kvalley.py  gui_kvalley.py  readme.md  test_kvalley.py
mastermind/: cli_mastermind.py  game_mastermind.py  gui_mastermind.py  readme.md  test_mastermind.py
no-thanks/: cli_nothanks.py  game_nothanks.py  gui_nothanks.py  readme.md  test_nothanks.py
orchard/: cli_orchard.py  game_orchard.py  gui_orchard.py  readme.md  test_orchard.py
othello/: cli_othello.py  game_othello.py  gui_othello.py  readme.md  test_othello.py
paletto/: cli_paletto.py  game_paletto.py  gui_paletto.py  readme.md  test_paletto.py
pig/: cli_pig.py  game_pig.py  gui_pig.py  (+2 more)
(+29 files in other folders)
