[tool.poetry]
name = "board-games"
version = "0.1.0"
description = ""
authors = ["Maxim Mozgovoy <rgsoftware@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pgzero = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.7"
pytest = "^7.1.2"
pyexcel = "^0.7.0"
pyexcel-xlsx = "^0.6.0"
dotmap = "^1.3.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
